<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@id/edit_name"
                android:textAppearance="@style/MediumText"
                android:inputType="text"
                android:hint="@string/lbl_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.60"
                />
            <LinearLayout
                android:paddingStart="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.40"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">
                <CheckBox
                    android:id="@id/edit_enabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@id/label06"
                    android:textAppearance="@style/MediumText"
                    android:text="Enabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_horizontal_margin_small"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@id/label01"
                android:textAppearance="@style/MediumText"
                android:text="@string/lbl_trig_type"
                android:layout_weight="0.40"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
            <Spinner
                android:id="@id/spinner01"
                android:layout_width="0dp"
                android:layout_weight="0.60"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_horizontal_margin_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--
                        <TextView
                            android:id="@id/label02"
                            android:textAppearance="@style/MediumText"
                            android:text="@string/lbl_cur_expr"
                            android:labelFor="@id/txt_cur_expr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
            -->
            <EditText
                android:id="@id/txt_cur_expr"
                android:textAppearance="@style/MediumText"
                android:hint="@string/lbl_cur_expr"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@id/label02"
                android:textAppearance="@style/FragmentTitleTextStyle"
                android:text="Expression Builder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>
        </LinearLayout>

        <LinearLayout
            android:id="@id/ctr_expr_tools"
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_horizontal_margin_small"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/action_open_paren"
                android:text="@string/action_open_paren"
                />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/action_close_paren"
                android:text="@string/action_close_paren"
                />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/action_insert_and"
                android:text="@string/action_insert_and"
                />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/action_insert_or"
                android:text="@string/action_insert_or"
                />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/action_insert_not"
                android:text="@string/action_insert_not"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@id/label04"
                android:textAppearance="@style/MediumText"
                android:text="@string/lbl_expr_type"
                android:layout_width="0dp"
                android:layout_weight=".40"
                android:layout_height="wrap_content"
                android:labelFor="@id/spinner02"
                />
            <Spinner
                android:id="@id/spinner02"
                android:layout_width="0dp"
                android:layout_weight=".60"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@id/label05"
                android:textAppearance="@style/MediumText"
                android:text="@string/lbl_http_hdr"
                android:layout_width="0dp"
                android:layout_weight=".40"
                android:layout_height="wrap_content"
                android:labelFor="@id/spinner03"
                />
            <Spinner
                android:id="@id/spinner03"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight=".60"
                android:layout_gravity="start|center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@id/ctr_hdr_name"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@style/MediumText"
                android:text="@string/lbl_hdr_name"
                android:layout_width="0dp"
                android:layout_weight=".40"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_hdr_name"
                />

            <EditText
                android:id="@id/edit_hdr_name"
                android:layout_width="0dp"
                android:layout_weight=".60"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@id/ctr_operand"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@id/lbl_operand"
                android:textAppearance="@style/MediumText"
                android:text="@string/lbl_hdr_val"
                android:layout_width="0dp"
                android:layout_weight=".40"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_operand"
                />

            <EditText
                android:id="@id/edit_operand"
                android:layout_width="0dp"
                android:layout_weight=".60"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/action_add"
                android:text="@string/action_add"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
