<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@id/container01"
                android:paddingBottom="@dimen/activity_horizontal_margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                    <TextView
                        android:id="@id/label01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_horizontal_margin"
                        android:textAlignment="center"
                        android:textAppearance="@style/MediumText"
                        android:text="@string/app_name"
                        />
            </RelativeLayout>

            <RelativeLayout
                android:id="@id/container05"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/activity_horizontal_margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@id/label05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OAuth Client Credentials"
                    android:textAppearance="@style/FragmentTitleTextStyle"
                    android:paddingBottom="@dimen/activity_horizontal_margin_small"
                    />
                <EditText
                    android:id="@id/client_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:hint="Client Id"
                    android:layout_below="@id/label05"
                    />

                <EditText
                    android:id="@id/client_secret"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Client Secret"
                    android:inputType="text"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:layout_below="@id/client_id"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@id/container02"
                android:layout_gravity="center"
                android:paddingTop="@dimen/activity_horizontal_margin_small"
                android:paddingBottom="@dimen/activity_horizontal_margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@id/label02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="API Gateway OAuth Server"
                    android:textAppearance="@style/FragmentTitleTextStyle"
                    android:paddingBottom="@dimen/activity_horizontal_margin_small"
                    />
                <EditText
                    android:id="@id/gateway_host"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:hint="@string/gateway_host"
                    android:layout_below="@id/label02"
                    />

                <EditText
                    android:id="@id/gateway_port"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/gateway_port"
                    android:inputType="number"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:layout_below="@id/label02"
                    android:layout_toEndOf="@id/gateway_host"
                    android:layout_toRightOf="@id/gateway_host"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@id/container03"
                android:layout_gravity="left"
                android:paddingTop="@dimen/activity_horizontal_margin_small"
                android:paddingBottom="@dimen/activity_horizontal_margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@id/label03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Credentials"
                    android:layout_centerHorizontal="false"
                    android:textAppearance="@style/FragmentTitleTextStyle"
                    android:paddingBottom="@dimen/activity_horizontal_margin_small"
                    />

                <EditText
                    android:id="@android:id/text1"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="false"
                    android:layout_below="@id/label03"
                    android:hint="@string/username"
                    />

                <EditText
                    android:id="@android:id/text2"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_centerHorizontal="false"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:layout_below="@id/label03"
                    android:layout_toRightOf="@android:id/text1"
                    android:layout_toEndOf="@android:id/text1"
                    />

            </RelativeLayout>

            <LinearLayout
                android:id="@id/container04"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    style="@style/ProgressBar"
                    android:id="@android:id/progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone"
                    />

                <Button
                    android:id="@android:id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>